frontend/src/Base.css
.btn {
  padding: 2px 10px;
  background-color: #177e89;
  border-color: #177e89;
}
body {
  /* background-image: url(https://lh3.googleusercontent.com/_tcY7QLx6X_8/UY1_bXEw_dI/AAAAAAAACGI/cED5J49RVlc/w500-h125-p/03-chevron-hand.jpg); */
  background-color: #084c61;
}

a {
  color: #dfdce3;
  font-weight: 600;
}
.trashButton {
  background-color: #db3a34;
  -webkit-text-fill-color: #323031;
  border: #323031;
  padding: 0px 5px;
  cursor: pointer;
  margin-top: 3px;
  margin-right: 6px;
  margin-left: 3px;
  margin-bottom: 3px;
}
.updateButton {
  background-color: #177e89;
  -webkit-text-fill-color: #ffc857;
  padding: 0px 5px;
  border: #323031;
  cursor: pointer;
  margin: 3px;
}
h2 {
  text-align: center;
}
.Title {
  /* font-family: 'Monofett', cursive; */
  font-size: 90px;
  -webkit-text-fill-color: #084c61;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #323232;
}

.Home {
  background: url(https://cdn5.teebooks.com/3611-large_default/bookshelves-u-set-of-6.jpg);
  background-size: cover;
  -webkit-text-fill-color: #084c61;
  -webkit-text-stroke-width: 0.25px;
  -webkit-text-stroke-color: #323031;
  font-weight: 500;
  font-size: 25px;
  border-radius: 25px;
}
.RegistrationLogin {
  background-color: #177e89;
  display: inline-block;
  width: 50%;
  color: #dfdce3;
  border: 3px;
  border-radius: 25px;
  border-color: #084c61;
}
.BookList {
  background-color: #323031;
  padding: 25px;
  display: inline-block;
  color: #dfdce3;
  border: 3px;
  border-radius: 25px;
  border-color: #084c61;
}
.bookInfo {
  background-color: #177e89;
  border-color: #db3a34;
  border-style: solid;
  border-width: 3px;
  border-radius: 25px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 30px;
  width: 75%;
  display: inline-block;
  color: #323031;
}

.userBooks {
  background-color: #323031;
  padding: 25px;
  display: inline-block;
  color: #dfdce3;
  border: 3px;
  border-style: solid;
  border-radius: 25px;
  border-color: #ffc857;
  width: 50%;
  padding-left: 50px;
}
.fa-book {
  color: #db3a34;
  margin-right: 5px;
}
.userShelf {
  color: #177e89;
}
.userList {
  background-color: #ffc857;
  width: 50%;
  border-radius: 25px;
  color: #323031;
  display: inline-block;
}

.userBtn {
  color: #323031;
}
.btnSignIn {
  background-color: #ffc857;
  border: 1px;
  border-style: solid;
  border-color: #084c61;
}
.btnSignIn a {
  color: #323031;
}
.saveBtn {
  -webkit-text-fill-color: #dfdce3;
}
p {
  font-size: 30px;
  -webkit-text-fill-color: #084c61;
  -webkit-text-stroke-width: 0.25px;
  -webkit-text-stroke-color: #323031;
}
.updateFormBtn {
  background-color: #084c61;
  border-color: #084c61;
  margin: 3px;
}
.updateForm {
  padding: 20px;
  margin: 10px;
  border: 2px;
  background-color: #b4b3b4;
  border-style: solid;
  border-color: #ffc857;
  border-radius: 25px;
}
.FilteredMultiSelect {
  display: flex;
  flex-direction: column;
  margin-left: 100px;
  margin-top: 5px;
  margin-bottom: 30px;
  padding-right: 100px;
}
.multiSelectBtn {
  /* margin-left: 25px;
  padding-right: 15px; */
  background-color: #ffc857;
  color: #323031;
}
.btnDate {
  background-color: #ffc857;
  color: #323031;
  margin-left: 5px;
}
.btnDate a {
  color: #323031;
}
.BookForm {
  width: 75%;
  background-color: #177e89;
  border-style: solid;
  border-width: 3px;
  border-color: #323031;
  border-radius: 25px;
  display: inline-block;
  padding: 15px;
}
.Forms {
  display: inline-block;
}
/* colors {
	color: #fe5f55
	color: #2f93b5
	color: #1d3356
} */

